--- a/man/gensio_err.3
+++ b/man/gensio_err.3
@@ -1,12 +1,11 @@
 .TH gensio_err 3 "24 Feb 2019"
 .SH NAME
 gensio_err \- Error reporting values for gensio functions
-
 .SH SYNOPSIS
 .B #include <gensio/gensio_err.h>
 .br
 .B const char *gensio_err_to_str(int err)
-
+.SH "DESCRIPTION"
 The return values for gensio functions that return errors and the
 reported values in callbacks from the gensio library are all gensio
 errors.  Possible values are:
