--- a/man/gensio_write.3
+++ b/man/gensio_write.3
@@ -1,7 +1,6 @@
 .TH gensio_write 3 "24 Feb 2019"
 .SH NAME
 gensio_write \- Write data to a gensio
-
 .SH SYNOPSIS
 .B #include <gensio/gensio.h>
 .TP 20
@@ -10,8 +9,7 @@ gensio_write \- Write data to a gensio
 .B                   const void *buf, gensiods buflen,
 .br
 .B                   const char *const *auxdata);
-.PP
-
+.SH "DESCRIPTION"
 Write data to the given gensio.  The data is in
 .I buf
 and the length of
