--- a/man/str_to_gensio.3
+++ b/man/str_to_gensio.3
@@ -2,7 +2,6 @@
 .SH NAME
 str_to_gensio, str_to_gensio_child, gensio_acc_str_to_gensio
 \- Create a gensio from a string
-
 .SH SYNOPSIS
 .B #include <gensio/gensio.h>
 .TP 20
@@ -31,8 +30,7 @@ str_to_gensio, str_to_gensio_child, gensio_acc_str_to_gensio
 .B                   gensio_event cb, void *user_data,
 .br
 .B                   struct gensio **io);
-.PP
-
+.SH "DESCRIPTION"
 .B str_to_gensio
 allocates a new gensio stack based upon the given string
 .B str.
