--- a/man/gensio_set_callback.3
+++ b/man/gensio_set_callback.3
@@ -36,4 +36,4 @@ the gensio is running, race conditions may occur.
 Return the user data passed in with the gensio was created or set
 by one of the above two functions.
 .SH "SEE ALSO"
-gensio(5), gensio_accepter_event(3)
+gensio(5), gensio_event(3), gensio_accepter_event(3)
