--- a/man/str_to_gensio_accepter.3
+++ b/man/str_to_gensio_accepter.3
@@ -13,6 +13,18 @@ str_to_gensio_accepter \- Create a gensio accepter from a string
 .B                            void *user_data,
 .br
 .B                            struct gensio_accepter **acc);
+.TP 20
+.B int str_to_gensio_accepter_child(struct gensio_accepter *child,
+.br
+.B                            const char *str,
+.br
+.B                            struct gensio_os_funcs *o,
+.br
+.B                            gensio_accepter_event cb,
+.br
+.B                            void *user_data,
+.br
+.B                            struct gensio_accepter **acc);
 .SH "DESCRIPTION"
 .B str_to_gensio_accepter
 allocates a new gensio accepter stack based upon the given string
