--- a/man/gensio_get_type.3
+++ b/man/gensio_get_type.3
@@ -1,7 +1,8 @@
 .TH gensio_get_type 3 "27 Feb 2019"
 .SH NAME
 gensio_get_type, gensio_get_child, gensio_is_client, gensio_is_reliable,
-gensio_is_packet, gensio_is_authenticated, gensio_is_encrypted
+gensio_is_packet, gensio_is_authenticated, gensio_is_encrypted,
+gensio_is_message
 \- Return general information about a gensio
 .SH SYNOPSIS
 .B #include <gensio/gensio.h>
@@ -23,6 +24,8 @@ gensio_is_packet, gensio_is_authenticated, gensio_is_encrypted
 .B bool gensio_is_authenticated(struct gensio *io);
 .TP 20
 .B bool gensio_is_encrypted(struct gensio *io);
+.TP 20
+.B bool gensio_is_message(struct gensio *io);
 .SH "DESCRIPTION"
 .B gensio_get_type
 return the type string for the gensio (if
@@ -60,6 +63,12 @@ authenticated the certauth client by either certificate or password.
 
 .B gensio_is_encrypted
 returns true if the connection is encrypted, false if not.
+
+.B gensio_is_message
+returns if the genio is message-oriented.  In a message-oriented
+genio, a write can explicitly mark message boundaries, these are
+delivered to the reader with those boundaries set.  See gensio(5) for
+details on how this works.
 
 Note that for the "gensio_is_xxx" type of requests, the properly is
 usually inherited from the child.  So if you run a telnet gensio on
