--- a/man/gensio_acc_get_type.3
+++ b/man/gensio_acc_get_type.3
@@ -1,6 +1,7 @@
 .TH gensio_acc_get_type 3 "27 Feb 2019"
 .SH NAME
-gensio_acc_get_type, gensio_acc_is_reliable, gensio_acc_is_packet
+gensio_acc_get_type, gensio_acc_is_reliable, gensio_acc_is_packet,
+gensi_acc_is_message
 \- Return general information about a gensio accepter
 .SH SYNOPSIS
 .B #include <gensio/gensio.h>
@@ -28,6 +29,10 @@ gensio_is_reliable(3) for details.
 returns if the genios produce by this accepter are packet-oriented.  See
 gensio_is_packet(3) for details.
 
+.B gensio_acc_is_message
+returns if the genios produce by this accepter are message-oriented.  See
+gensio_is_message(3) for details.
+
 .SH "SEE ALSO"
 gensio_err(3), gensio(5), gensio_get_type(3), gensio_is_reliable(3),
-gensio_is_packet(3)
+gensio_is_packet(3), gensio_is_message(3)
