--- a/man/gensio_control.3
+++ b/man/gensio_control.3
@@ -157,6 +157,11 @@ Get the fingerprint for the certificate from the other end.
 .SS "GENSIO_CONTROL_ENVIRONMENT"
 Set the environment pointer for an exec.  For pty and stdio gensios.
 The data is a pointer to an argv array (char * const envp[])
+.SS "GENSIO_CONTROL_MAX_WRITE_PACKET"
+On a packet gensio, return the maximum packet size that can be sent.
+Any write of this amount or less will be sent as a single message
+that will be delivered as one read on the other end, or it will
+not be sent at all (zero-byte send count).
 .SH "RETURN VALUES"
 Zero is returned on success, or a gensio error on failure.
 .SH "SEE ALSO"
