gtlsshd: Add a -nodaemon option
For easier debugging.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -51,6 +51,9 @@ Do not allow password logins, only certificate-based logins.
 Do not fork the program at the beginning or when a connection is
 received.  This allows easier debugging of the program.
 .TP
+.I \-\-nodaemon
+Do not daemonize (double fork) the program.
+.TP
 .I \-\-nosctp
 Disable SCTP support.
 .TP
